// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`footer email renders properly 1`] = `
<a
  class="footer__link"
  href="mailto:michal.cesarczyk@gmail.com"
  id="contact"
>
  michal.cesarczyk@gmail.com
</a>
`;

exports[`thumbnails must render properly 1`] = `
<div
  class="footer__thumbnail"
>
  <a
    data-testid="github-icon-test"
    href="https://github.com/MCesarczyk"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="footer__icon"
    >
      <svg>
        githubThumbnail.svg
      </svg>
    </div>
  </a>
</div>
`;

exports[`thumbnails must render properly 2`] = `
<div
  class="footer__thumbnail"
>
  <a
    data-testid="linkedin-icon-test"
    href="https://www.linkedin.com/in/micha%C5%82-cesarczyk-0820589a"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="footer__icon"
    >
      <svg>
        linkedinThumbnail.svg
      </svg>
    </div>
  </a>
</div>
`;

exports[`thumbnails must render properly 3`] = `
<div
  class="footer__thumbnail"
>
  <a
    data-testid="upwork-icon-test"
    href="https://www.upwork.com/freelancers/~01ec95abd3619f24c6"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="footer__icon"
    >
      <svg>
        upworkThumbnail.svg
      </svg>
    </div>
  </a>
</div>
`;
